syntax = "proto3";

package ares.messaging.device;

import "google/protobuf/empty.proto";
import "CommandMetadata.proto";
import "CommandTemplate.proto";
import "CommandResult.proto";

service AresDevices {
	rpc ListAresDevices(google.protobuf.Empty) returns (ListAresDevicesResponse);
	rpc GetDeviceStatus(DeviceStatusRequest) returns (DeviceStatus);
	rpc GetCommandMetadatas(CommandMetadatasRequest) returns (CommandMetadatasResponse);
	rpc ExecuteCommand(CommandTemplate) returns (CommandResult);
}

message AresDeviceInfo {
	string name = 1; // Name of the device
}

message ListAresDevicesResponse
{
	repeated AresDeviceInfo ares_devices = 1;
}

message CommandMetadatasRequest {
	string device_name = 1;
}

message CommandMetadatasResponse {
	repeated CommandMetadata metadatas = 1; 
}

message DeviceStatusRequest
{
	string device_name = 1;
}

message DeviceStatus
{
	DeviceState device_state = 1;
	string message = 2;
}

enum DeviceState
{
	INACTIVE = 0;
	ACTIVE = 1;
	ERROR = 2;
}